Fix circular reference and modernize code with Java 21 features
1. Fix circular dependency between WorkflowEngine and WorkflowExecutionService:
   - Created WorkflowExecutor interface
   - Implemented interface in WorkflowEngine
   - Updated WorkflowExecutionService to use interface

2. Modernize code with Java 21 features:
   - Use var for local variable type inference
   - Replace Thread with virtual threads
   - Simplify stream operations and expressions
   - Use pattern matching with instanceof where applicable

🤖 Generated with [Claude Code](https://claude.ai/code)

Co-Authored-By: Claude <noreply@anthropic.com>